<resources>
    <string name="app_name">Protocol Connect</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="send_temp_password">Send Temporary Password</string>
    <string name="temp_password_message">Enter your email address below to receive a temporary password. Then log-in and change your password.</string>
    <string name="back">Back</string>
    <string name="will_you_be_able_to_attend">Will you be able to attend?</string>
    <string name="no_answer_selected">No answer selected</string>
    <string name="yes_ill_be_there">Yes, I\'ll be there.</string>
    <string name="yes_late">Yes, but I\'ll be late.</string>
    <string name="no_cant_attend">No, I can\'t attend.</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="why_will_you_be_late">Why will you be late?</string>
    <string name="not_feeling_well">I\'m not feeling well.</string>
    <string name="transportation_issue">I have a transportation issue.</string>
    <string name="previous_appointment">I\'m still at a previous appointment.</string>
    <string name="another_reason">I have another reason.</string>
    <string name="when_would_you_come">When approximately would you come?</string>
    <string name="additional_information">Additional information</string>
    <string name="why_you_cant_attend">Could you tell us why you can\'t attend?</string>
    <string name="messages">Messages</string>
    <string name="schedule">Schedule</string>
    <string name="change_password">Change password</string>
    <string name="contact">Emergency Contact</string>
    <string name="log_out">Log out</string>
    <string name="new_password_message">To set a new password:</string>
    <string name="set_new_password">Set new password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="back_to_messages">Go back to messages</string>
    <string name="write_a_message">Write a message</string>
    <string name="message_arrow_desc">Part of message bubble icon</string>
    <string name="message_send_desc">Send button for messages</string>
    <string name="new_user">New User</string>
    <string name="message_icon">Message icon</string>
    <string name="new_message_notification">New message notification</string>
    <string name="firstsignin_password_message">Please change your password on your first sign-in.</string>
</resources>
