<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/why_you_cant_attend"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/all_not_coming_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/not_feeling_well_not_coming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_feeling_well" />

            <RadioButton
                android:id="@+id/transportation_issue_not_coming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transportation_issue" />

            <RadioButton
                android:id="@+id/previous_appointment_not_coming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_appointment" />

            <RadioButton
                android:id="@+id/another_reason_not_coming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/another_reason" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/additional_information"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/additional_info_not_coming"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:minLines="4"
            android:scrollbars="vertical"
            android:textSize="14sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="submitResponse"
                android:text="@string/submit" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelResponse"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>